--- a/views/players/current-grind.ejs
+++ b/views/players/current-grind.ejs
@@ -1,4 +1,4 @@
-<h1><%= player.nickname %>'s Recent Vehicles Page</h1>
+<h1>Player's tanks grinding in the last two weeks</h1>
 
 <form action="/players/account/<%= player.account_id %>" method="GET">
   <input type="hidden" name="player" value="<%= player.nickname %>">
@@ -10,16 +10,24 @@
   <input type="submit" value="Vehicles to Grind">
 </form>
 
-<% recentTanks.forEach(function(t){ %>
-<h4><%= dbTanks[(t.tank_id)] ? dbTanks[(t.tank_id)].name : 'ERROR' %><span class="tank-details">Tier <%= dbTanks[(t.tank_id)] ? dbTanks[(t.tank_id)].tier : 'ERROR' %> 
-	| <%= dbTanks[(t.tank_id)] ? nation(dbTanks[(t.tank_id)].nation) : 'ERROR' %> | <%= dbTanks[(t.tank_id)] ? type(dbTanks[(t.tank_id)].type) : 'ERROR' %></span></h4>
 
-<ul>
-	<li>Number of Battles: <%= t.all.battles %></li>
-	<li>Win Rate: <%= ((t.all.wins/t.all.battles)*100).toFixed(2) %>%</li>
-	<li>Last Battle Date: <%= convertDate(t.last_battle_time) %>
+<% recentTanks.forEach(function(t){ %>
+	<% if (timestamp - t.last_battle_time < 1209600 && dbTanks[(t.tank_id)].tier < 10 && dbTanks[(t.tank_id)].next_tanks.length > 0){ %>
+	<h4><%= dbTanks[(t.tank_id)] ? dbTanks[(t.tank_id)].name : 'ERROR' %>
+		<span class="tank-details">
+			Tier <%= dbTanks[(t.tank_id)] ? dbTanks[(t.tank_id)].tier : 'ERROR' %> 
+			| <%= dbTanks[(t.tank_id)] ? nation(dbTanks[(t.tank_id)].nation) : 'ERROR' %> 
+			| <%= dbTanks[(t.tank_id)] ? type(dbTanks[(t.tank_id)].type) : 'ERROR' %>
+		</span>
+	</h4>
+	<ul>
+		<li>Number of Battles: <%= t.all.battles %></li>
+		<li>Win Rate: <%= ((t.all.wins/t.all.battles)*100).toFixed(2) %>%</li>
+		<li>Last Battle Date: <%= convertDate(t.last_battle_time) %>
+	<% } %>
 <% }) %>
 </ul>
+
 
 <% function convertDate(stamp){ %>
 	<% var months_arr = ['Jan','Feb','Mar','Apr','May','Jun','Jul','Aug','Sep','Oct','Nov','Dec']; %>
@@ -73,3 +81,4 @@
 		<% return 'Mercenary' %>
 	<% } %>
 <% } %>
+
