--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,3 +1,12 @@
-<div class="container">
-	<h1>This is the homepage</h1>
+<h1 class="homepage-title">World of Tanks Companion</h1>
+
+<div class="homepage-landing row">
+	<a href="/tanks" class="homepage-tanks col s6 offset-s2"><div>
+		<h2 class="homepage-subtitle">Explore All Tanks</h2>
+		<p class="homepage-sub-content">See the stats of all the tanks in the game (Over 600)! Learn the tanks as you progress through the tech trees. Decide if a premium tank is right for you.</p>
+	</div></a>
+	<a href="/players" class="homepage-players col s6 offset-s2"><div>
+		<h2 class="homepage-subtitle">Find Players</h2>
+		<p class="homepage-sub-content">Find any Xbox player. Check their stats over their tanking career. See what tanks that are playing now, and find out what tanks they are grinding through!</p>
+	</div></a>
 </div>
