--- a/views/players/current-grind.ejs
+++ b/views/players/current-grind.ejs
@@ -2,28 +2,28 @@
 
   <h1>My Current Grind</h1>
 
-  <form action="/players/account/<%= user.account_id %>/" method="GET">
+  <form action="/players/account/<%= user.account_id %>/" method="GET" class="player-page-button">
     <input type="hidden" name="player" value="<%= player.nickname %>">
-    <input type="submit" value="My Career Stats">
+    <input type="submit" value="My Career Stats" class="waves-effect waves-light btn">
   </form>
 
-  <form action="/players/account/<%= user.account_id %>/recent-vehicles" method="GET">
+  <form action="/players/account/<%= user.account_id %>/recent-vehicles" method="GET" class="player-page-button">
     <input type="hidden" name="player" value="<%= player.nickname %>">
-    <input type="submit" value="My Recently Played Vehicles">
+    <input type="submit" value="My Recently Played Vehicles" class="waves-effect waves-light btn">
   </form>
 
 <% } else { %>
 
   <h1><%= player.nickname %>'s Current Grind</h1>
 
-  <form action="/players/account/<%= player.account_id %>/" method="GET">
+  <form action="/players/account/<%= player.account_id %>/" method="GET" class="player-page-button">
     <input type="hidden" name="player" value="<%= player.nickname %>">
-    <input type="submit" value="<%= player.nickname %>'s Career Stats">
+    <input type="submit" value="<%= player.nickname %>'s Career Stats" class="waves-effect waves-light btn">
   </form>
 
-  <form action="/players/account/<%= player.account_id %>/recent-vehicles" method="GET">
+  <form action="/players/account/<%= player.account_id %>/recent-vehicles" method="GET" class="player-page-button">
     <input type="hidden" name="player" value="<%= player.nickname %>">
-    <input type="submit" value="<%= player.nickname %>'s Recently Played Vehicles">
+    <input type="submit" value="<%= player.nickname %>'s Recently Played Vehicles" class="waves-effect waves-light btn">
   </form>
 
 <% } %>
@@ -31,21 +31,25 @@
 
 <% recentTanks.forEach(function(t){ %>
 	<% if (timestamp - t.last_battle_time < 1209600 && dbTanks[(t.tank_id)].tier < 10 && dbTanks[(t.tank_id)].next_tanks.length > 0){ %>
-	<h4><%= dbTanks[(t.tank_id)] ? dbTanks[(t.tank_id)].name : 'ERROR' %>
-		<span class="tank-details">
-			Tier <%= dbTanks[(t.tank_id)] ? dbTanks[(t.tank_id)].tier : 'ERROR' %> 
-			| <%= dbTanks[(t.tank_id)] ? nation(dbTanks[(t.tank_id)].nation) : 'ERROR' %> 
-			| <%= dbTanks[(t.tank_id)] ? type(dbTanks[(t.tank_id)].type) : 'ERROR' %>
-		</span>
-	</h4>
-	<ul>
-		<li>Number of Battles: <%= t.all.battles %></li>
-		<li>Win Rate: <%= ((t.all.wins/t.all.battles)*100).toFixed(2) %>%</li>
-		<li>Last Battle Date: <%= convertDate(t.last_battle_time) %>
-	<% } %>
+	<div class="grind-tank-display">
+		<h4><%= dbTanks[(t.tank_id)] ? dbTanks[(t.tank_id)].name : 'ERROR' %>
+			<span class="grind-tank-details">
+				Tier <%= dbTanks[(t.tank_id)] ? dbTanks[(t.tank_id)].tier : 'ERROR' %> 
+				| <%= dbTanks[(t.tank_id)] ? nation(dbTanks[(t.tank_id)].nation) : 'ERROR' %> 
+				| <%= dbTanks[(t.tank_id)] ? type(dbTanks[(t.tank_id)].type) : 'ERROR' %>
+			</span>
+		</h4>
+		<ul>
+			<li>Number of Battles: <%= t.all.battles %></li>
+			<li>Win Rate: <%= ((t.all.wins/t.all.battles)*100).toFixed(2) %>%</li>
+			<li>Last Battle Date: <%= convertDate(t.last_battle_time) %></li>
+		<% } %>
+		</ul>
+		<form action="/tanks/show/<%= dbTanks[(t.tank_id)].id %>" method="GET">
+			<input type="submit" class="grind-div-button" value="">
+		</form>
+	</div>
 <% }) %>
-</ul>
-
 
 <% function convertDate(stamp){ %>
 	<% var months_arr = ['Jan','Feb','Mar','Apr','May','Jun','Jul','Aug','Sep','Oct','Nov','Dec']; %>
